--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <div class="container">
     <div class="proxima">
-      <button type="button" name="load_data" id="load_data" class="btn btn-info" onclick="jogaFooter();formataTabela()">Próxima</button>
+      <button type="button" name="load_data" id="load_data" class="btn btn-info" onclick="jogaFooter()">Próxima</button>
     </div>
   </div>
 
